--- a/src/pages/AdminGolfers.module.css
+++ b/src/pages/AdminGolfers.module.css
@@ -175,10 +175,9 @@
 }
 
 .table {
-  width: 100%;
+  min-width: 700px;
   border-collapse: collapse;
   font-size: 13px;
-  table-layout: fixed;
 }
 
 .table th {
